# Pyr-CLI

./: README.md  cal.py  concat.py  count.py  distinct.py  dupe.py  emit.py  glue.py  match.py  num.py  order.py  peek.py  progress.py  pyc.py  pycat.py  pyhead.py  pyline.py  pyniq.py  pyproject.toml  pysort.py  pyspl.py  pytail.py  pytype.py  pywalk.py  scan.py  search.py  seek.py  show.py  slice.py  snif.py  subs.py  tally.py  term-colors.py  track.py  when.py  where.py
cli/: __init__.py  ansi.py  cli_program.py  cli_program_runner.py  colors.py  console_colors.py  constants.py  file_reader.py  ini.py  io.py  pattern_finder.py  patterns.py  terminal.py  text.py  text_program.py  types.py
docs/: CodeEvaluationRubric-DesignGuidelines.docx  CommandLineHelpTextRubric.docx
fyrcli/: __about__.py  __init__.py
fyrcli/cli/: __init__.py  ansi.py  cli_program.py  constants.py  ini.py  io.py  patterns.py  render.py  terminal.py  text.py  text_program.py  types.py
fyrcli/commands/: __init__.py  dupe.py  emit.py  glue.py  num.py  order.py  peek.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  track.py  when.py  where.py
pyforge/: __init__.py
pyforge/cli/: __init__.py  ansi.py  cli_program.py  constants.py  ini.py  io.py  patterns.py  render.py  terminal.py  text.py  text_program.py  types.py
pyforge/commands/: dupe.py  emit.py  glue.py  num.py  order.py  peek.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  track.py  when.py  where.py
pyrcli/cli/: __init__.py  ansi.py  cli_program.py  ini.py  io.py  os_info.py  patterns.py  render.py  terminal.py  text.py  text_program.py  types.py
pyrcli/cli/progress/: _base.py  _render.py  progress_bar.py  spinner.py
pyrcli/commands/: dupe.py  emit.py  glue.py  num.py  order.py  peek.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  track.py  when.py  where.py
scripts/: bootstrap-user.sh  concat.sh  delpoy.sh  deploy.sh  distinct.sh  dupe.sh  match.sh  peek.sh  posix.sh  pyc.sh  pycat.sh  pyhead.sh  pyline.sh  pyniq.sh  pysort.sh  pyspl.sh  pytail.sh  pytype.sh  pywalk.sh  run-tests.sh  scan.sh  search.sh  seek.sh  setup.sh  show.sh  slice.sh  snif.sh  tally.sh  track.sh  windows.bat
test/: __init__.py  ansi_test.py  ini_test.ini  ini_test.py  run-tests.bat  run-tests.sh  term_colors.py  terminal_test.py  text_test.py
tests/: test_ansi.py  test_ini.py  test_io.py  test_patterns.py  test_render.py  test_terminal.py  test_text.py
