[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fyrcli"
version = "1.0.0"
description = "A CLI toolkit of small, composable programs designed for deterministic pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Roth Earl" }]
keywords = ["cli", "coreutils", "toolkit", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "colorama",
    "python-dateutil",
    "requests",
]

[project.scripts]
dupe = "fyrcli.commands.dupe:main"
emit = "fyrcli.commands.emit:main"
glue = "fyrcli.commands.glue:main"
num = "fyrcli.commands.num:main"
order = "fyrcli.commands.order:main"
peek = "fyrcli.commands.peek:main"
scan = "fyrcli.commands.scan:main"
seek = "fyrcli.commands.seek:main"
show = "fyrcli.commands.show:main"
slice = "fyrcli.commands.slice:main"
subs = "fyrcli.commands.subs:main"
tally = "fyrcli.commands.tally:main"
track = "fyrcli.commands.track:main"
when = "fyrcli.commands.when:main"
where = "fyrcli.commands.where:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["fyrcli*"]
